--- a/build.gradle
+++ b/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.boot:spring-boot-test-autoconfigure')
 }
