--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=eefi4thee6phiQu9Owushi4deihii5
 spring.flyway.locations=classpath:db/migration/postgresql
 
 # Hibernate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
 # Hides HHH000424: Disabling contextual LOB creation as createClob() method threw error
