--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 
 # Flyway
 spring.flyway.locations=classpath:db/migration/hsql
+
+# Hibernate
+spring.jpa.show-sql=true
