Migrations are working.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.flyway.locations=classpath:db/migration/postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
-# Hides HHH000424: Disabling contextual LOB creation as createClob() method threw error
+# Hides log message "HHH000424: Disabling contextual LOB creation as createClob() method threw error"
 # https://stackoverflow.com/a/48623870/1591777
 logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: WARN
