--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,4 @@ services:
       POSTGRES_PASSWORD: eefi4thee6phiQu9Owushi4deihii5
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - "data:/var/lib/postgresql/data"
-
-volumes:
-  data:
-    external:
-      name: "idea-db"
+      - "./.data:/var/lib/postgresql/data"
