--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/cosidea
-spring.datasource.username=cosidea
+spring.datasource.url=jdbc:postgresql://localhost:5432/cosmind
+spring.datasource.username=cosmind
 spring.datasource.password=eefi4thee6phiQu9Owushi4deihii5
 
 # Flyway
