--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,11 @@ dependencies {
     compile('org.glassfish.jaxb:jaxb-runtime:2.3.0')
     compile('javax.activation:activation:1.1.1')
 
+    // Spring Security
+    compile("org.springframework.security:spring-security-web")
+    compile("org.springframework.security:spring-security-config")
+    compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity4")
+
     // dev tools
     compile("org.springframework.boot:spring-boot-devtools")
 
