--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile("org.springframework.security:spring-security-web")
     compile("org.springframework.security:spring-security-config")
     compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity4")
+    compile("org.springframework.security:spring-security-test")
 
     // dev tools
     compile("org.springframework.boot:spring-boot-devtools")
