--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     
     // database
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.hibernate:hibernate-java8')
     testRuntime('org.hsqldb:hsqldb:2.4.0')
     runtime('org.postgresql:postgresql:42.2.2')
     compile('org.flywaydb:flyway-core:5.0.7')
